--- a/style.css
+++ b/style.css
@@ -229,3 +229,19 @@ header {
   border-radius: 15px;
   box-shadow: rgba(207, 0, 0, 1) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
 }
+
+.reportCardRounded {
+  border-radius: 15px;
+  box-shadow: rgb(109, 109, 109) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+  margin-bottom: 15px;
+}
+
+@media (max-width:767px) {
+  .hide-border-sm
+  {
+    border-bottom: 2px solid rgb(109, 109, 109) !important;
+    border-right:0px solid !important;
+    }
+
+
+  }
